# SimpleGraphicsWindow

./: README.md
Main/: CMakeLists.txt  Main  Main.cpp
Main/tools/: Logger.cpp  Logger.h  Logger.h.gch
Main/window/: Window.cpp  Window.h
